--- a/build.gradle
+++ b/build.gradle
@@ -1,2 +1,10 @@
 
-apply plugin: 'org.springframework.boot'
+import com.github.spotbugs.SpotBugsTask
+import org.springframework.boot.gradle.plugin.SpringBootPlugin
+
+buildscript {
+  ext {
+      kotlin_version = " '1.3.50'
+      spring_boot_version = '2.2.1.RELEASE'
+  }
+}
