--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "echo bot - LINE Messaging API",
-    "description": "This is a sample application for the LINE Messaging API",
+    "description": "This is my sample application for the LINE MCOC Helper",
     "keywords": ["chatbot", "line", "java"],
     "env": {
         "LINE_BOT_CHANNEL_TOKEN": {
